# ohlt

./: .clang-format  .gitignore  .prettierignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  build-and-test-example_twisted.sh  build-and-test-win32-example_twisted.sh  build-and-test.sh  launch-hl-in-crossover.sh  replace-bsps.sh  windows.manifest
.github/workflows/: ci.yml
src/common/: TimeCounter.h  blockmem.h  bounding_box.cpp  bounding_box.h  bsp_file_sizes.cpp  bsp_file_sizes.h  bspfile.cpp  bspfile.h  call_finally.h  cli_option_defaults.h  cmdlib.cpp  cmdlib.h  cmdlinecfg.cpp  cmdlinecfg.h  color.h  common_settings.h  context.h  developer_level.cpp  developer_level.h  entity_key_value.h  external_types.h  filelib.cpp  filelib.h  hashing.h  hlassert.h  hull_size.cpp  hull_size.h  internal_types.h  key_value_definitions.cpp  key_value_definitions.h  key_values.cpp  key_values.h  legacy_character_encodings.cpp  legacy_character_encodings.h  log.cpp  log.h  map_entity_parser.cpp  map_entity_parser.h  map_token_parser.h  mathlib.cpp  (+29 more)
src/common-bsp-and-csg/: hull_size.cpp  hull_size.h
src/common/external_types/: external_types.h  texinfo.h
src/common/internal_types/: entity.h  internal_types.h  various.h
src/hlbsp/: brink.cpp  brink.h  bsp5.h  hlbsp.cpp  hlbsp.h  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/hlcsg/: brush.cpp  brushunion.cpp  csg.h  hlcsg.cpp  hlcsg.h  hlcsg_settings.h  hullfile.cpp  map.cpp  properties.cpp  qcsg.cpp  textures.cpp  wadcfg.cpp  wadpath.cpp  wadpath.h
src/hlcsg/csg_types/: csg_entity.h  csg_types.h
src/hlrad/: compress.cpp  compress.h  hlrad.cpp  hlrad.h  hlradutil.cpp  lerp.cpp  lightmap.cpp  list.h  loadtextures.cpp  mathutil.cpp  meshdesc.cpp  meshdesc.h  meshtrace.cpp  meshtrace.h  nomatrix.cpp  progmesh.cpp  qrad.cpp  qrad.h  qradutil.cpp  rad_cli_option_defaults.h  sparse.cpp  studio.cpp  studio.h  trace.cpp  transfers.cpp  transparency.cpp  vismatrix.cpp  vismatrixutil.cpp
src/hlvis/: flow.cpp  hlvis.cpp  hlvis.h  vis.cpp  vis.h  zones.cpp
src/ripent/: ripent.cpp  ripent.h  ripent_cli_option_defaults.h
src/sdHLBSP/: brink.cpp  qbsp.cpp  solidbsp.cpp
src/sdHLCSG/: csg.h  properties.cpp  wadcfg.cpp
src/sdHLRAD/: compress.cpp  lerp.cpp  lightmap.cpp  meshtrace.h  qrad.h  studio.cpp  vismatrixutil.cpp
src/sdHLVIS/: vis.h  zones.h
src/sdRIPENT/: ripent.h
src/sdhlt/: Makefile
src/sdhlt/common/: blockmem.cpp  blockmem.h  bounding_box.cpp  bounding_box.h  boundingbox.h  bsp_file_sizes.cpp  bspfile.cpp  bspfile.h  cli_option_defaults.h  cmdlib.cpp  cmdlib.h  cmdlinecfg.cpp  cmdlinecfg.h  filelib.cpp  filelib.h  legacy_character_encodings.cpp  legacy_character_encodings.h  log.cpp  log.h  mathlib.cpp  mathlib.h  mathtypes.h  messages.cpp  resourcelock.cpp  resourcelock.h  scriplib.cpp  scriplib.h  stringlib.h  studio.h  threads.cpp  threads.h  transition.h  utf8.cpp  util.h  vector_inplace.h  wad_structs.h  wad_texture_name.h  win32fix.h  winding.cpp  winding.h
src/sdhlt/sdHLBSP/: brink.cpp  bsp5.h  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
src/sdhlt/sdHLCSG/: ansitoutf8.cpp  brush.cpp  brushunion.cpp  csg.h  hullfile.cpp  map.cpp  properties.cpp  qcsg.cpp  textures.cpp  wadcfg.cpp  wadpath.cpp  wadpath.h
src/sdhlt/sdHLRAD/: compress.cpp  compress.h  lerp.cpp  lightmap.cpp  list.h  loadtextures.cpp  mathutil.cpp  meshdesc.cpp  meshdesc.h  meshtrace.cpp  meshtrace.h  nomatrix.cpp  progmesh.cpp  qrad.cpp  qrad.h  qradutil.cpp  rad_cli_option_defaults.h  sdHLRAD.vcproj  sdHLRAD.vcxproj  sdHLRAD.vcxproj.filters  sparse.cpp  stringlib.cpp  studio.cpp  trace.cpp  transfers.cpp  transparency.cpp  vismatrix.cpp  vismatrixutil.cpp
src/sdhlt/sdHLVIS/: flow.cpp  vis.cpp  vis.h  zones.cpp  zones.h
src/sdhlt/sdRIPENT/: ripent.cpp
src/sdhlt/template/: BaseMath.h  EndianMath.h  ReferenceArray.h  ReferenceCounter.h  ReferenceObject.h  ReferencePtr.h  basictypes.h
test-and-compare/: test-and-compare.sh
tools/: entities.void  hlt.fgd  settings.txt  wad.cfg
tools/mods/cstrike/: nowadtextures_blocklist.cfg
tools/mods/tfc/: nowadtextures_blocklist.cfg
tools/mods/valve/: nowadtextures_blocklist.cfg
